# hakTbank

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  docker.sh  init-docker.sh  pyproject.toml
MobileRA/: .gitignore  ThemeContext.tsx  api.ts  app.json  app.local.json.example  package-lock.json  package.json
MobileRA/app/: _layout.tsx  index.tsx  login.tsx  profile.tsx  register.tsx
app/: __main__.py  logger.py  settings.py
app/api/: exceptions.py  server.py
app/scheduler/jobs/: clean_db_job.py  renewal_sub_job.py
app/services/: __init__.py
app/services/srv_auth/: __init__.py
app/services/srv_chat/: manager.py
app/services/srv_neuro/: config.py  objects.py
app/services/srv_payment/: manager.py  objects.py
app/services/srv_purchase/: __init__.py  manager.py  objects.py
app/services/srv_queue/: __init__.py  objects.py
app/storage/enums/: __init__.py  feedback.py  request.py
app/storage/models/: __init__.py  message.py  purchase.py  requests.py  subscription.py  transaction.py  user.py
migrations/versions/: 20251205_1748_04c432b6e7d6.py  20251205_1809_b3627e5c7a1a.py  20251205_1941_a4a2cc7b3673.py  20251205_1952_009f1b277bfc.py  20251205_2112_679a594221d6.py  20251205_2333_b4055923b048.py  20251206_0315_c9a61a404654.py
server/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
server/app/: __main__.py  settings.py
server/app/api/: server.py
server/app/scheduler/: __init__.py
server/app/services/: __init__.py
server/app/storage/: __init__.py
server/migrations/: env.py  script.py.mako
server/migrations/versions/: 20251206_0014_a4491a39ebdc.py  20251206_0106_0d0598f10bba.py  20251206_0401_cbb04f67cc95.py  20251206_2019_0382eff2632d.py
web/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  api.ts  index.css  theme.ts
web/src/api/: api.ts
web/src/components/: Layout.tsx  MarkdownRenderer.tsx  RequireAuth.tsx
web/src/context/: AuthContext.tsx
web/src/pages/: AuthPage.tsx  Chat.tsx  ChatPage.tsx  LoginPage.tsx  Profile.tsx  ProfilePage.tsx  RegisterPage.tsx  TariffsPage.tsx
(+93 files in other folders)
