[project]
name = "tbank-api"
version = "1.0.0"
description = "API для TBank Mobile Assistent"
authors = [{name = "Dmitriy"}]
requires-python = ">=3.12"
dependencies = [
    "jwt",
    "bcrypt",
    "pytz",
    "redis",
    "httpx",
    "boto3",
    "openai",
    "loguru",
    "asyncpg",
    "fastapi",
    "aiohttp",
    "asyncpg",
    "alembic",
    "pydantic",
    "yookassa",
    "sqlmodel",
    "uvicorn",
    "starlette",
    "httptools",
    "SQLAlchemy",
    "apscheduler",
    "google-auth",
    "google-genai",
    "PyJWT[crypto]",
    "pydantic[email]",
    "python-multipart",
    "psycopg2-binary",
    "python-logging-loki",
    "pydantic-settings",
    "google-generativeai",
    "google-api-python-client",
    "scalar-fastapi",
    "markitdown",
]

[dependency-groups]
dev = [
    "mypy",
    "types-requests",
    "types-python-dateutil"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]



[tool.alembic]
script_location = "migrations"
prepend_sys_path = "."
version_path_separator = "os"
sqlalchemy_url = "driver://user:pass@localhost/dbname"
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s"



[tool.mypy]
python_version = "3.12"
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "uvicorn.*",
    "sqlalchemy.*",
    "alembic.*",
    "boto3.*",
    "botocore.*",
    "openai.*",
    "asyncpg.*",
    "httpx.*",
    "pydantic.*",
    "sqlmodel.*",
    "scalar_fastapi.*",
    "yookassa.*",
    "nudenet.*",
    "markitdown.*",
    "google.*",
    "firebase_admin.*",
    "apscheduler.*",
    "prometheus_client.*",
    "loguru.*"
]
ignore_missing_imports = true
